# hds-core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SECURITY.md  appveyor.yml  notarize.sh
android/: CMakeLists.txt  WalletJNI.java  common.cpp  common.h  jni.cpp  node_model.cpp  node_model.h  wallet_model.cpp  wallet_model.h
node/: db.h  (+10 more)
node/utils/: CMakeLists.txt  laser_hds_demo.cpp  node_net_sim.cpp
wallet/: CMakeLists.txt
wallet/api/: CMakeLists.txt  api.cpp  api.h  api.rest  api_cli.cpp  api_handler.cpp  api_handler.h  i_atomic_swap_provider.h
wallet/broadcaster/: CMakeLists.txt  broadcaster.cpp  broadcaster.h
wallet/cli/: CMakeLists.txt  cli.cpp  laser.cpp  laser.h
wallet/client/: CMakeLists.txt  changes_collector.h  wallet_client.cpp  wallet_client.h  wallet_model_async.h
wallet/client/extensions/broadcast_gateway/: broadcast_msg_creator.cpp  broadcast_msg_creator.h  broadcast_msg_validator.cpp  broadcast_msg_validator.h  broadcast_router.cpp  broadcast_router.h  interface.h
wallet/core/: CMakeLists.txt  assets_utils.cpp  assets_utils.h  base58.cpp  base58.h  base_transaction.cpp  base_transaction.h  base_tx_builder.cpp  base_tx_builder.h  bbs_miner.cpp  bbs_miner.h  common.cpp  common.h  common_utils.cpp  common_utils.h  default_peers.cpp  default_peers.h  exchange_rate.cpp  exchange_rate.h  node_connection_observer.h  node_network.cpp  node_network.h  private_key_keeper.cpp  private_key_keeper.h  secstring.h  simple_transaction.cpp  simple_transaction.h  strings_resources.cpp  strings_resources.h  variables_db.h  version.cpp  version.h  wallet.cpp  wallet.h  wallet_db.cpp  wallet_db.h  wallet_network.cpp  wallet_network.h  wallet_request_bbs_msg.h
wallet/laser/: CMakeLists.txt  channel.cpp  channel.h  connection.cpp  connection.h  i_channel_holder.h  i_receiver_holder.h  mediator.cpp  mediator.h  receiver.cpp  receiver.h  types.h
wallet/service/: CMakeLists.txt  monitor.cpp  monitor.h  node_connection.cpp  node_connection.h  pipe.cpp  pipe.h  service.cpp  service.h  utils.cpp  utils.h  websocket_server.cpp  websocket_server.h
wallet/service-balancer/: config.go  config.json  jsonrpc-bbs.go  newmsg-request.go  sbbs-monitor.go  services.go  status-request.go  wallet-service.go
wallet/service-balancer/services/: config.go  service.go
wallet/service/client/: index.html  monitor_client.js  monitor_unsubscribe.js
wallet/transactions/assets/: CMakeLists.txt  ainfo_transaction.cpp  ainfo_transaction.h  aissue_transaction.cpp  aissue_transaction.h  aissue_tx_builder.cpp  aissue_tx_builder.h  aregister_transaction.cpp  aregister_transaction.h  aregister_tx_builder.cpp  aregister_tx_builder.h  asset_base_tx.cpp  asset_base_tx.h  assets_kdf_utils.cpp  assets_kdf_utils.h  assets_reg_creators.cpp  assets_reg_creators.h  aunregister_transaction.cpp  aunregister_transaction.h  aunregister_tx_builder.cpp  aunregister_tx_builder.h
wallet/transactions/lelantus/: base_lelantus_tx_builder.cpp  base_lelantus_tx_builder.h  pull_transaction.cpp  pull_transaction.h  pull_tx_builder.cpp  pull_tx_builder.h  push_transaction.cpp  push_transaction.h  push_tx_builder.cpp  push_tx_builder.h
wallet/transactions/swaps/: CMakeLists.txt  common.cpp  common.h  lock_tx_builder.cpp  lock_tx_builder.h  second_side.h  shared_tx_builder.cpp  shared_tx_builder.h  swap_transaction.cpp  swap_transaction.h  swap_tx_description.cpp  swap_tx_description.h  utils.cpp  utils.h
wallet/unittests/: CMakeLists.txt  bitcoin_rpc_environment.cpp  bitcoin_rpc_test.cpp  broadcasting_test.cpp  electrum_test.cpp  laser_test_auto_close.cpp  laser_test_close.cpp  laser_test_delete.cpp  laser_test_drop.cpp  laser_test_listen_first.cpp  laser_test_listen_second.cpp  laser_test_open.cpp  laser_test_open_fail.cpp  laser_test_send.cpp  laser_test_send_fail.cpp  laser_test_utils.h  lelantus_test.cpp  mock_bbs_network.cpp  news_channels_test.cpp  offline.cpp  swap_board_test.cpp  swap_test.cpp  swap_test_environment.cpp  test_helpers.h  util.cpp  util.h  wallet_api_test.cpp  wallet_assets_test.cpp  wallet_db_test.cpp  wallet_test.cpp  wallet_test_environment.cpp
wallet/unittests/api_client/: test_accept_swap_btc.js  test_accept_swap_ltc.js  test_accept_swap_qtum.js  test_list.js  test_start_swap_btc.js  test_start_swap_ltc.js  test_start_swap_qtum.js
(+326 files in other folders)
